# OmniSter

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SGMStereo.cpp  cmake_install.cmake  detectChessboardCorners.cpp  globVector.cpp  loadCalibration.cpp  main.cpp  reprojectionError.cpp  saveCalibration.cpp
data/Durham_Raw_Footage/: gps_data.csv  gps_data_w_headers.csv
data/calibration_parameters/: front_camera_params.xml
data/calibration_parameters_active/: back_camera_params.xml
data/frame_rate/: .~lock.fps_data.csv#  fps_data.csv  fps_data_backup.csv
data/logging/: .~lock.coverage_data.csv#  .~lock.odometry_data2.csv#  coverage_data.csv  odometry_data.csv  pcl.csv
data/point_cloud/: SGBMerror1.ply  his11.ply  his12.ply  his21.ply  his22.ply
include/: SGMStereo.h  SPSStereo.h  calcChessboardCorners.h  calib_img_gen.h  defParameter.h  detectChessboardCorners.h  globVector.h  loadCalibration.h  pointCloud.h  reprojectionError.h  saveCalibration.h  sgbm_param.h  stereocam.h
matlab/: calibration_analysis.m  graph_calibration_pose.m  graph_frame_rms.m  merge.m
src/: SPSStereo.cpp  calcChessboardCorners.cpp  calib_img_gen.cpp  pointCloud.cpp
